--- a/_posts/2014-03-12-Thoughts.md
+++ b/_posts/2014-03-12-Thoughts.md
@@ -5,5 +5,5 @@ date:   2024-03-12 11:31:38 +0100
 categories: jekyll update
 ---
 
-Data is pretty nice, look at this plot ![Image](heatmap_final_final_vol3.png)
+Data is pretty nice, look at this plot ![Image](https://github.com/StubChris/StubChris.github.io/blob/main/_posts/heatmap_final_final_vol3.png)
 
